--- a/campusdigital/package.json
+++ b/campusdigital/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.10.0",
     "quasar": "^1.0.0",
     "vue-splash": "^1.2.1"
   },
