--- a/campusdigital/package.json
+++ b/campusdigital/package.json
@@ -18,7 +18,8 @@
     "core-js": "^3.6.5",
     "firebase": "^8.10.0",
     "quasar": "^1.0.0",
-    "vue-splash": "^1.2.1"
+    "vue-splash": "^1.2.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
