--- a/campusdigital/package.json
+++ b/campusdigital/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.10.0",
     "quasar": "^1.0.0",
+    "three": "^0.132.2",
     "vue-splash": "^1.2.1",
     "vuex": "^3.6.2"
   },
