--- a/campusdigital/package.json
+++ b/campusdigital/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.10.0",
+    "gsap": "^3.7.1",
     "quasar": "^1.0.0",
     "three": "^0.132.2",
     "vue-splash": "^1.2.1",
